# open-images-annotation

./: .gitignore  ANNOTATION_TOOLS.md  PIPELINE.md  README.md  annotator.py  bulk_annotate.py  fetch.py  models_and_data.json  requirements.txt  reviewer.py
annotate/: __init__.py  _data.py  annotate.py  data.py  faces.py  segmentation.py  settings.py  utils.py
scripts/: calculate_scale_factors.py  convert_csv_to_dlib_xml.py  open-images-download.sh  open-images-extract-and-move.sh  opencv_annotation_viewer.py
trainers/: CMakeLists.txt  README.md  csv_index_builder.cpp  dlib_face_detection_trainer.cpp  dlib_face_landmarks_trainer.cpp
